PROJECT(rpc)
CMAKE_MINIMUM_REQUIRED (VERSION 3.20.0)
SET(CMAKE_CXX_FLAGS "-g -Wall -Werror -std=c++11")
FIND_PACKAGE(Protobuf REQUIRED)
message(STATUS "Using Protocol Buffers ${Protobuf_VERSION}")
ADD_SUBDIRECTORY(proto)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${PROTOBUF_INCLUDE_DIR})
ADD_EXECUTABLE(main main.cpp)
TARGET_LINK_LIBRARIES(main proto ${PROTOBUF_LIBRARY} )#Protobuf_LIBRARIES
